# PROCESS-

./: #process.f90#  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  BUILD1.ps  BUILD2.ps  CHANGELOG.md  CICC.ps  CMakeLists.txt  CMakeLists_win.txt  CONTRIBUTING.md  GNUmakefile  IN.DAT_demo1  IVST.ps  Jenkinsfile  MENARD_IN.DAT.  Makefile  Makefile_  Makefile_New  Old_Makefile  PWR.ps  README.md  UserGuide_AppendixA.tex  UserGuide_AppendixC.tex  UserGuide_AppendixD.tex  UserGuide_Chapter1.tex  UserGuide_Chapter2.tex  UserGuide_Chapter3.tex  UserGuide_Chapter4.tex  UserGuide_Chapter5.tex  UserGuide_Chapter6.tex  UserGuide_Chapter7.tex  UserGuide_Chapter8.tex  UserGuide_Uncertainties.bib  UserGuide_Uncertainties.tex  a_to_b.conf  aachange.f  aachange.f90  aamain.f  (+267 more)
.gitlab/issue_templates/: bug.md  general.md
ChangeLog_Update/: ChangelogUpdate.md  README.md  changelog_template.jinja2  changelog_upversion.py  create_changelog.py  yaml_template.jinja2
Griff Directory/: README.md
PLASMOD/: KE_log.txt  PLASMOD_doc.odt  calculate_beam_split.f90  comments_versions.txt  control_scheme.f90  cubsfml.f90  cubsfml.inc  deallocate_all.f90  defaults_inputs.f90  e3m.f  e3m.f90  emeq.inc  emeq2.inc  equil.f90  evalstuffm.m  fort.2901  grad_func.f90  makefile2  makefile2_migs  makefile3  output_list.txt  pedestal_model.inc  produce_transport.inc  solmodel.f90  structs.f90  syscode_dummy.f90  transport_solver.f90  trash.fff  trmodel.f90
PLASMOD/CHARTST/: PROCESSINPUT.chartst  PROCESSOUTPUT.chartst  forastra1.txt  forastra11.txt  forastra2.txt  fort.2901  fort.444  fort.774
changelog_update/: 1456.yaml  1574.yaml  1577.yaml  1632.yaml  README.md  changelog_upversion.py  create_changelog.py
cmake/: f2py.cmake  f90wrap.cmake  ford.cmake  gfortranlibs.cmake  pip.cmake  preprocess.cmake  preprocess.py  process_preprocessing.cmake  utilities.cmake
data/lz_non_corona/: Ar_z.ps  Be_z.ps  Ne_z.ps
dev/: process_wrapper.py
docker/ci/: Dockerfile
docker/ci-docker/: Dockerfile
docker/dev/: Dockerfile
docker/dev-m1/: Dockerfile
docker/python-coverage/: Dockerfile
documentation/: UserGuide_AppendixA.tex  UserGuide_AppendixB.tex  UserGuide_AppendixC.tex  UserGuide_Chapter1.tex  UserGuide_Chapter3.tex  UserGuide_Chapter4.tex  UserGuide_Chapter5.tex  UserGuide_Chapter6.tex  UserGuide_Chapter7.tex  developerguide.tex  gui.eps  helias5b.eps  optsolverdoc.bbl  optsolverdoc.blg  optsolverdoc.tex  process.tex  tfdoc.blg  tfdoc.tex  utilitiesdoc.tex
documentation/documentation/: developerguide.tex  optsolverdoc.bib  optsolverdoc.tex  radiation.dia  utilitiesdoc.tex
documentation/figures/: current_vs_time.eps  portsize.eps
documentation/ford/: index.md  index_fast.md
documentation/html/: vardes.html  vardes.tex
documentation/old_docs/: developerguide.tex  tf_refs.bib  tfdoc.bbl  tfdoc.blg  tfdoc.tex
documentation/proc-pages/: about.md  getting-started.md  index.md  installation.md  publications.md  solver-guide.md  usage.md  vardes.css  vardes.md
documentation/release_notes/: release_notes_1_0.md
documentation/xfigs/: caller.fig  portsize.fig
examples/: .gitignore  README.md  csv_output.ipynb  examples.ipynb  examples.py  scan.ipynb  scan.py
examples/L_mode/: README.md
examples/Steady_State/: README.md
fispact/: main_p.for
griff_work/: HDF5_to_csv_vars.json  hdf5.csv  hdf_to_csv.py  single_run.py
griff_work/TE/: TE2  single_run.py
griff_work/monte_carlo/: .~lock.ref_MFILE.csv#  config_evaluate_uncertainties.json  monte_carlo.py  monte_carlo_plot.py
lz_non_corona/: Be_lz.ps  N__z.ps
patterns/: exception_patterns.py  logging_patterns.py  test_exception_patterns.py  test_logging_patterns.py
process/: availability.py  build.py  buildings.py  caller.py  cost_model_2.py  cost_model_base.py  costs.py  costs_2015.py  costs_step.py  cs_fatigue.py  divertor.py  divertor_ode.py  evaluators.py  final.py  ife.py  impurity_radiation.py  kallenbach.py  main.py  maths_library.py  optimiser.py  output.py  pfcoil.py  physics.py  physics_functions.py  plasma_geometry.py  plasma_profiles.py  power.py  process.py  process_script_advanced.py  pulse.py  scan.py  sctfcoil.py  solver.py  stellarator.py  structure.py  tfcoil.py  vacuum.py  variables.py  vmcon.py  water_use.py
release_notes/: draft_release_notes_1_0_0.md  release_notes_t383  release_notes_t384  release_notes_t385  release_notes_t389
scripts/: clone.sh  clone_script.sh  code_quality.sh  create_dicts.py  create_dicts_config.py  document_fortran_interface.py  f90wrap_interface_import_modifier.py  f90wrap_patch.py  install_ubuntu_dependencies.sh  process_script  python_dicts.py  time_baseline_2018.py  vardes.py  version_compare.sh
test_suite/: PROCESS Test Suite.html  _divertor01.txt  bindir.py  ci_test_suite.py  ci_test_suite_functions.py  output_divertor.txt  test_suite.py  test_suite_functions.py  text.txt
testing/: new_pf_costs_MFILE.DAT.json
tests/: conftest.py  pytest.ini  system_check.py
tracking/: generate_plot_data.py  generate_tracking_data.py  git.py  run_tracking_tool_jenkins.sh  test.txt  tracking.py  tracking_data.py
unit_tests/: main_test.cpp  test_current_drive.h  test_functions.h  test_ife.h  test_physics.h  test_util.h
utilities/: 2D_scan.conf  2D_scan.py  PROCESS_dicts.py  a_to_b.conf  a_to_b.py  archive.sh  build_index.py  cad_example_catia_macro.catvbs  cad_output.py  compare_radials.py  convert_in_dat.py  cost_analysis.py  cost_bar.py  cost_pie.py  create_csv4database.py  create_dicts.py  diagnose_process.py  diagnose_uncertainties.py  display_uncertainties.py  errorlist.json  evaluate_uncertainties.json  evaluate_uncertainties.py  fit_profile.py  in_dat_comparison.py  kallenbach.py  kallenbach_plotting.py  kallenbach_plotting2.py  line_length_standard.py  make_plot_dat.conf  make_plot_dat.py  mcnp_output.py  mfile-to-json.py  mfile_comparison.py  morris_method.py  morris_method_conf.json  morris_plotting.py  ndscan.py  ndscan_and_package.py  ndscan_package_only.py  ndscan_visualisation.py  (+38 more)
web/: .gitignore  variable_scraper.py
xfigs/: current_vs_time.fig.bak  powerflow3.dia
(+555 files in other folders)
